--- a/dinosure_course_gordon_fleming/.root-config.json
+++ b/dinosure_course_gordon_fleming/.root-config.json
@@ -135,7 +135,12 @@
       }
     }
   },
-  "alterationHooks": [],
+  "alterationHooks": [
+    {
+      "key": "update_cover",
+      "name": "Update Cover Amount"
+    }
+  ],
   "scheduledFunctions": [],
   "fulfillmentTypes": [
     {
