add schema & update-cover (hyphen)

--- a/dinosure_course_gordon_fleming/.root-config.json
+++ b/dinosure_course_gordon_fleming/.root-config.json
@@ -137,7 +137,7 @@
   },
   "alterationHooks": [
     {
-      "key": "update_cover",
+      "key": "update-cover",
       "name": "Update Cover Amount"
     }
   ],
