--- a/dinosure_course_gordon_fleming/.root-config.json
+++ b/dinosure_course_gordon_fleming/.root-config.json
@@ -141,7 +141,20 @@
       "name": "Update Cover Amount"
     }
   ],
-  "scheduledFunctions": [],
+  "scheduledFunctions": [
+    {
+      "functionName": "applyAnnualIncrease",
+      "policyStatuses": [
+        "active"
+      ],
+      "frequency": {
+        "type": "yearly",
+        "dayOfMonth": 1,
+        "monthOfYear": "january",
+        "timeOfDay": "02:00"
+      }
+    }
+  ],
   "fulfillmentTypes": [
     {
       "key": "extraction",
